--- a/PicoCTF/Cryptography/ReadMyCert.mdx
+++ b/PicoCTF/Cryptography/ReadMyCert.mdx
@@ -9,8 +9,8 @@ slug: "readmycert"
 
 ## Method
 
-1. Download the provided `.crt` file.
-2. In a Linux terminal, read/inspect it using OpenSSL. For example:
+1. Download the provided **CSR** file (`.csr`).
+2. In a Linux terminal, read/inspect it using OpenSSL:
 
 ```bash
 openssl req -in yourfile.csr -noout -text
@@ -20,11 +20,10 @@ openssl req -in yourfile.csr -noout -text
 
 ## Notes
 
-- If your file is a **certificate** (`.crt`) rather than a **CSR** (`.csr`), this alternative command is commonly used:
+- If the provided file is a **certificate** (`.crt`) rather than a **CSR** (`.csr`), use:
 
 ```bash
 openssl x509 -in yourfile.crt -noout -text
 ```
 
 - Copy the flag exactly (watch for extra whitespace).
-
