--- a/PicoCTF/Cryptography/basic-mod1.mdx
+++ b/PicoCTF/Cryptography/basic-mod1.mdx
@@ -15,7 +15,7 @@ slug: "basic-mod1"
 ```python
 string = "165 248 94 346 299 73 198 221 313 137 205 87 336 110 186 69 223 213 216 216 177 138"
 
-lst = list(map(int, string.split(" ")))
+lst = list(map(int, string.split()))
 
 flag = []
 for i in lst:
@@ -38,4 +38,3 @@ print(result)
 
 - This uses modulo **37** and a custom alphabet: `a-z` + `0-9` + `_`.
 - If you get an “index out of range” error, re-check that you used `% 37` and copied the numbers correctly.
-
